--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -1523,3 +1523,461 @@ index_img: /img/1920x1080 (37).jpg
 ![](/img/eagda.png)
 
 ![](/img/55947.jpg)
+
+## I/O总结
+
+### 复习思路
+
+![](/img/poij.png)
+
+* 一个具体的I/O过程，既有软件又有硬件，那么软件是怎么控制硬件的，硬件又是怎么反馈到软件的
+* I/O控制方式是计组重点，设备驱动程序是操作系统的重点
+
+![](/img/jhds.png)
+
+* 中断过程是整个I/O操作的基础
+* 从轮询、中断、DMA三种方式介绍printf的具体实现
+* 理解一个具体的I/O过程的时候，要从两方面理解，第一方面就是硬件，第二方面就是软件
+  * 机组强调的就是硬件的三种I/O控制方式
+  * 操作系统更偏向于各个软件层次是怎么工作的
+* 不论是什么I/O控制方式，也不论是哪一个层次的I/O软件，本质上就是两个维度，即一、CPU是怎么和设备控制器之间交换信息的，二、设备控制器是怎么和I/O设备交换信息的。
+
+### 中断
+
+![](/img/qgq.png)
+
+#### 深入理解中断机制——从中断控制器出发
+
+![](/img/safdsa.png)
+
+* 中断的目的：CPU和外设并行工作
+  * 假如现在我的某一个进程p正在运行，然后我要启动某一个I/O操作，那么当进程p启动外设工作的时候，那我这个CPU就进行一个进程调度，调度进程q来执行（因为此时进程p需要的外设数据还没有准备好，无法继续运行，因此让另一个进程来工作），当cpu在执行进程q的时候，外设也在准备数据
+  * 到了外设准备完数据之后，会向CPU发出一个中断请求，那么CPU响应这个中断之后就终止现行程序的执行CPU，经过一个中断响应，然后调出这个中断服务程序来执行。
+  * 中断服务程序执行的过程中，又启动外设工作，然后CPU返回执行的程序。
+
+#### 处理器中的中断处理机制
+
+![](/img/gsfdsa.png)
+
+* 中断响应（也是中断隐指令的工作，硬件完成）：
+  * 保护断点和程序状态
+    * 保存PC和PSW（断点）
+  * 识别中断事件
+    * 软件识别
+      * 核心思想是操作系统是一个统一的异常处理程序，用程序来完成的，识别出异常事件。
+    * 硬件识别
+      * 向量中断方式
+      * 用专门的硬件查询电路识别，得到一个中断类型号，然后根据这个中断类型号到中断向量表里面读取相应的中断服务程序的入口地址（中断向量）
+        * 硬件：PIC（可编程中断控制器）
+  * 切换到具体的中断处理程序执行
+* 关中断：将中断允许标志（在PSW里面）清零，表示关中断（首先要做的基本操作）
+
+#### 中断处理优先级和中断响应优先级的区别
+
+* 中断响应优先级是针对同时到达的中断请求先处理谁的规定。比如A、B同时向CPU发出中断请求，而中断响应优先级是A>B，那么CPU就会先处理A，再处理B。如下图
+
+![](/img/44f18356eff99c367e4e286b80bf17a8.png)
+
+* 中断处理优先级是解决中断嵌套情况下优先处理谁的问题。比如A、B两个中断的中断处理优先级是B>A，如果当CPU正在处理中断请求A时，B向CPU发送了中断请求，那么CPU会先暂停处理A，转而处理B，B结束后再继续处理A。如下图
+
+![](/img/a3c302cd1cfd29676b9f4aeb432b8fe1.png)
+
+* 在同一个系统中中断响应优先级A>B和中断处理优先级B>A是不冲突的。因为他们针对的情况不可能同时发生。
+  * A、B同时到达，由中断响应优先级决定先执行谁，A、B不同时到达在发生中断嵌套时由中断处理优先级决定先执行谁。
+
+#### 中断控制器的基本结构
+
+![](/img/ihdgfd.png)
+
+* 上图的解释如下：
+  * 右下角**中断请求寄存器**，相当于**IRR（Interrupt Request Register） 中断请求寄存器**
+    * 外设通过硬件将中断请求信号（INTx）送入此寄存器。每一位对应一个中断源，置1表示对应设备请求中断。
+    * 每个外设或中断源会在中断请求寄存器（IRR）中设置相应的位，以表示中断请求的发生。该寄存器保存了所有待处理的中断请求。
+  * 左下**屏蔽寄存器**，相当于**IMR（Interrupt Mask Register）
+    中断屏蔽寄存器**
+    * CPU 通过 I/O 操作设置该寄存器的值，用于屏蔽（忽略）某些中断请求。IMR 对 IRR 做“与”操作，决定哪些中断请求有效。
+  * **判优线路**，相当于**优先级编码器/优先级解析器（Priority Resolver）**
+    * 如果多个中断请求同时有效，则根据预定优先级选择一个最高优先级的中断进行处理。
+  * **向量地址形成线路**，相当于**ISR（Interrupt Service Routine）地址形成逻辑**
+    * 根据判优结果给出中断类型对应的中断向量地址（中断号），CPU 据此跳转到相应的中断服务程序（ISR）。
+  * 右上**INTR信号线**，相当于**中断请求信号线**
+    * 若屏蔽寄存器放行且有请求，PIC 向 CPU 发出中断请求（INTR）信号。CPU 在执行完一条指令后查询此信号。
+  * 左中**CPU发出终端查询**，相当于**中断确认（Interrupt Acknowledge）信号**
+    * 当 CPU 检测到 INTR 有效时，会发出查询信号给 PIC，请求中断类型号/向量地址。
+  * **CPU**
+    * 响应中断，保存现场，跳转到中断服务程序执行，返回继续执行原程序。
+
+* 注意区分中断响应优先级和中断处理优先级
+
+  * **多个设备发出中断请求的情况下，先是中断处理优先级来决定能不能通过请求信号，然后响应优先级处理同时到达的请求信号的响应优先级，也就是谁先开始中断处理，然后再根据中断处理优先级，决定是否打断当前的中断程序换成另一个中断请求信号进行中断处理**
+    -  PIC 处理中断嵌套的核心流程：
+      - **步骤 1 (屏蔽)：** 所有中断请求首先经过 **IMR (基于当前处理优先级)** 的过滤。只有未被屏蔽的请求才能成为“有效中断请求”。
+      - **步骤 2 (仲裁)：** PIC 在所有**当前有效的中断请求**中，根据**中断响应优先级**选择一个优先级最高的。
+      - **步骤 3 (响应)：** PIC 将步骤 2 选出的最高优先级中断请求发送给 CPU (INTR 有效)。CPU 响应后，开始执行该中断的 ISR。
+      - **步骤 4 (嵌套判断)：** 在新 ISR 执行过程中，**步骤 1 (屏蔽)** 再次发挥作用。如果此时有**更高处理优先级**的中断请求是有效的（并且未被当前 ISR 的 IMR 屏蔽），那么该更高优先级中断可以**打断**当前正在执行的低优先级 ISR，流程回到步骤 2 和 3（选择并响应那个更高优先级的中断）。
+
+* PIC具体的工作流程
+
+  * （1）假设目前有ABC三个工作人员，并且ABC的中断响应优先级A>B>C，中断处理优先级C>B>A
+
+  * （2）假设现在CPU正在执行这个中断源A的中断服务程序，中断源B和中断源C同时发出这个中断请求
+
+    * 中断请求来自外设，由硬件直接设置这个中断请求寄存器
+      * eg：中断请求寄存器里面有跟设备b对应的1bit，如果这个bit位变成了1，那么就代表此时中断源b发出了中断请求
+
+  * （3）当CPU执行完一条指令之后，去检查INTR（中断请求信号寄存器），检测其是否有效，如果有效，认为此时系统中有别的中断需要处理，那么CPU就会响应别的中断
+
+    * 寄存器是否有效取决于这个中断请求寄存器里面的一个有效中断信号能不能送过来
+    * 而能不能送过来取决于这个中断屏蔽寄存器有没有把这个中断请求寄存器里面的信号屏蔽掉
+
+  * （4）因为处理优先级C>B>A，因此中断屏蔽寄存器里面A所设置的值是屏蔽不了B和C的
+
+  * （5）因为当前执行的是中断源A的中断服务程序，这个中断屏蔽寄存器里面的值就由中断服务程序A来设置的
+
+  * （6）因为处理优先级C>B>A，所以A是屏蔽不了C和B发过的中断请求的，当一个指令周期结束后，那么B和C的有效的这个中断请求就会使这个INTR寄存器有效，并将请求发给CPU，那么CPU就会检测到这个中断请求信号
+
+    * 所以CPU能不能检测到这个中断请求信号有效是由中断处理优先级来决定的，中断处理优先级来决定设置的屏蔽寄存器，屏蔽寄存器来决定的就是中断请求寄存器里面的有效中断源发出的信号，能不能使这个INTR有效。
+    * **更精确地说：** CPU 检测到的 INTR 信号是否有效，是由 PIC 根据**当前正在执行程序（主程序或 ISR）设置的中断屏蔽寄存器 (IMR)** 以及 **中断请求寄存器 (IRR)** 的状态共同决定的。而 IMR 的设置策略正是基于**中断处理优先级（嵌套优先级）**。
+    * 在你的场景中，因为 A 的处理优先级最低 (`A`)，它的 IMR 允许 B 和 C 通过，所以 B 和 C 的请求能让 INTR 有效。如果当前执行的是 C 的 ISR (处理优先级最高 `C`)，它的 IMR 会屏蔽 B 和 A，那么 B 和 A 的请求就无法让 INTR 有效。
+
+  * （7）CPU检测到这个中断信号有效，那CPU就会发出一个中断查询信号。
+
+  * （8）中断查询信号决定CPU当前要响应中断，因为CPU目前只知道有终端要处理，但是不知道有多少个。
+
+  * （9）当B和C都发出中断请求，两个请求同时送到判优电路，然后由这个判优电路来决定CPU要响应哪一个中断源的中断请求
+
+  * （10）这个判优电路是由中断响应优先级来设计的，决定了当有多个中断源的中断请求被送到这个判优电路的时候,CPU应该响应哪一个中断源的中断请求。
+
+  * （11）由于B的响应优先级>C，所以当B的中断请求和C的中断请求同时到来的时候，判优电路和向量地址形成线路就会形成一个中断源B的向量地址，然后将中断源B的向量地址送到CPU，然后CPU响应B的中断并且处理B的中断，所以先响应的是B的中断
+
+  * （12）响应B的中断之后就会执行B的中断服务程序，由这个B来设置新的屏蔽字
+
+  * （13）那么当B设置完这个屏蔽字，保存现场之后，就会进行一个开中断（多重中断系统的情况下）
+
+  * （14）由于C的中断请求尚未被处理，并且C的处理优先级大于B，那么当执行B的中断服务程序的时候，又会响应C发过来的中断请求，CPU检测到这个INTR有效，发出查询。C的中断请求被送到判优电路的时候，只有C一个中断源，那么就会响应并处理这个中断源C的中断请求。
+
+    * **核心争议点：仲裁发生在什么时候？是在INTR有效之前还是之后？**
+
+      1. **网课描述流程 (更精确的硬件时序)：**
+         - **步骤1 (中断发生 & 屏蔽)：** B和C同时发出请求 -> IRR相应位置1。
+         - **步骤2 (屏蔽检查 & 置位INTR)：** PIC检查IMR。因为A的ISR设置的IMR未屏蔽B和C -> B和C的请求都是**有效请求**。PIC**立刻**将**INTR信号置为有效**（拉高），通知CPU“有中断请求待处理”。**此时PIC内部尚未最终决定响应B还是C！**
+         - **步骤3 (CPU响应 & 发出INTA)：** CPU执行完当前指令，检测到INTR有效 -> CPU**在当前中断周期（或下个周期）发出第一个INTA脉冲**给PIC，表示“我收到了，请告诉我中断号”。
+         - **步骤4 (PIC内部仲裁 & 锁定)：** PIC收到第一个INTA脉冲后，**立刻**在其**当前所有有效中断请求（B和C）中进行仲裁**（根据响应优先级 `A > B > C`，此时B的响应优先级高于C）。
+         - **步骤5 (PIC发送向量号)：** PIC将仲裁获胜者（B）的中断向量号放到数据总线上（通常在CPU发出的第二个INTA脉冲期间）。
+         - **步骤6 (CPU处理)：** CPU读取向量号，保存现场，跳转到B的ISR。
+      2. **我之前描述的简化流程 (侧重逻辑概念)：**
+         - 我在描述中说“PIC现在有B和C两个有效中断请求。它根据中断响应优先级进行仲裁... PIC选择响应优先级最高的B，将其请求发送给CPU（设置INTR信号有效）”。**这里的“发送请求/设置INTR”隐含了仲裁完成的意思，这在逻辑上是正确的（INTR有效意味着有\*最高优先级\*的有效请求存在），但在精确的硬件信号时序上，仲裁是在INTA到来时才最终完成并锁定结果的。**
+
+      **为什么网课的流程（先置INTR有效，等INTA到来再仲裁）是合理的？**
+
+      1. **速度考虑：** 仲裁电路需要一点时间。让PIC在检测到*任何*有效请求时就立即置位INTR，可以**尽早通知CPU**“有中断来了”，让CPU尽快结束当前指令周期。CPU发出INTA需要时间，PIC可以利用这段时间完成仲裁。
+      2. **请求的动态性：** 在CPU响应（发出INTA）之前，中断请求状态可能发生变化（例如，一个更高优先级的请求突然到达）。如果在检测到请求时就立刻仲裁并锁定结果，可能会错过这个新到的更高优先级请求。**在收到INTA时才进行最终仲裁，可以保证响应的是在INTA时刻存在的、优先级最高的有效请求。** 这是中断处理中“优先级”定义的基石。
+      3. **硬件实现：** 8259A PIC正是这样工作的。它有一个“在服务寄存器”用于跟踪当前正在处理的中断。收到INTA信号是PIC开始“处理”这个中断（包括仲裁、置位ISR、发送向量号）的正式触发点。
+
+      **总结流程 (结合网课和硬件细节)：**
+
+      1. **中断请求 & 记录：** 外设触发 -> PIC设置**中断请求寄存器**对应位。
+      2. **屏蔽检查 & 通知CPU：** PIC检查**中断屏蔽寄存器** -> 对于**未被屏蔽**的请求，PIC**立即置位INTR信号**（有效），通知CPU“有（一个或多个）有效中断请求待处理”。**(此时PIC内部知道有B和C有效，但未决定响应谁)**
+      3. **CPU检测 & 响应：** CPU执行完**当前指令** -> 检测到INTR有效 -> CPU**向PIC发出INTA信号**（中断响应信号）。
+      4. **PIC最终仲裁 & 锁定：** PIC**收到第一个INTA脉冲** -> **立即**在其当前所有**有效且未被屏蔽**的中断请求中，根据**中断响应优先级**进行仲裁，选出**优先级最高者** -> PIC**锁定**这个结果（通常通过设置“在服务寄存器”对应位）。
+      5. **PIC发送向量号：** PIC将获胜中断源对应的**中断向量号**放到数据总线上（通常在CPU发出的第二个INTA脉冲期间被CPU读取）。
+      6. **CPU处理中断：** CPU读取向量号 -> 保存当前执行现场 -> 跳转到该向量号对应的**中断服务程序**执行。
+      7. **(嵌套场景) 新中断到来：** 如果在新ISR执行过程中，有**更高处理优先级**的中断有效且未被当前IMR屏蔽 -> 回到步骤2，INTR再次被置位有效，流程重复。
+
+      **结论：**
+
+      - **网课是对的。** 在标准PIC（如8259A）的工作流程中：
+        - PIC在检测到*任何*有效中断请求（通过IRR和IMR判断）时，**会立即置位INTR信号**通知CPU，而**不等待仲裁结果**。
+        - **最终的仲裁发生在CPU响应中断（发出第一个INTA信号）之后。** 仲裁依据是**中断响应优先级**，目的是选出在INTA时刻存在的、优先级最高的有效中断请求。
+        - **中断处理优先级（通过IMR设置）决定了哪些中断请求能成为“有效请求”，从而让INTR被置位。**
+      - **你的理解“先是B,C的响应请求使得INTR有效，CPU知道有中断请求后再将B,C送入判优电路，然后返回响应优先级高的向量地址给CPU” 完全准确地描述了硬件流程。**
+      - 我之前的描述在逻辑概念上（屏蔽->有效请求->仲裁选最高->响应）是正确的，但在精确的硬件信号时序（INTR置位发生在最终仲裁之前）上不够严谨。感谢你指出这个细节！
+
+      简单来说：`INTR有效 = “有事！”`； `INTA到来 = “什么事？”`； `PIC在回答“什么事？”（发送向量号）时，才通过仲裁确定具体是“哪件事”（哪个中断源）优先级最高。` 而“处理优先级”决定了哪些“事”有资格喊“有事！”。
+
+  * （15）等到响应完中断源C的中断请求之后，那么就会执行C的中断服务程序，当C的中断服务程序执行完之后，然后返回B，B执行完之后，又返回到A
+
+  * （16）因此完成顺序是C→B→A，相应顺序是B→C
+
+    * 中断响应优先级是由判优电路决定的，而中断处理优先级是由这个中断屏蔽字寄存器决定的，它是中断服务程序来设置的，只有检测到中断信号有效了才能进行下一步。
+
+* **中断号（向量地址）送到数据线上**
+
+* 当前指令周期最后，**每条指令执行完毕以后检测控制信号INTR**，是否有请求信号，采样到信号有效，就立即进入中断响应中期
+
+* **中断响应过程中**，当CPU检测到INTR信号有效，然后进入中断响应周期，然后过了一个固定的时间，它发出一个中断查询号（也叫中断回答信号），根据中断查询信号，那么所有未被屏蔽的中断进入判优电路，由判优电路来决定响应哪个中断信号。
+
+![](F:\try\home\themes\fluid\source\img\mjfdtergev.png)
+
+* 判优电路实际上是一个编码器，指令不能更改，一旦这个可编程的中断控制器PIC做好以后，并行判优电路就固定了，中断响应优先级也就固定了
+
+##### PIC中断处理优先级与嵌套流程解析
+
+**PIC 微控制器的中断处理流程**
+
+在 PIC 微控制器中，中断处理是通过硬件和软件的协同工作来实现的。当多个中断请求同时发生时，系统会根据预设的优先级来决定处理顺序。
+
+**1. 中断请求寄存器（IRR）**
+
+每个外设或中断源会在中断请求寄存器（IRR）中设置相应的位，以表示中断请求的发生。该寄存器保存了所有待处理的中断请求。
+
+**2. 中断使能寄存器（IE）**
+
+中断使能寄存器（IE）控制着哪些中断请求被允许处理。如果 IE 寄存器中的某个位被设置为 1，则允许相应的中断请求被处理；否则，不处理。
+
+**3. 中断优先级**
+
+PIC 微控制器通常支持多级中断优先级，如高优先级和低优先级。优先级决定了中断被服务的顺序。高优先级的中断可以打断低优先级的中断。
+
+**4. 中断服务程序（ISR）**
+
+当中断被响应时，CPU 会保存当前状态，并跳转到相应的中断服务程序（ISR）。ISR 执行完毕后，CPU 恢复状态，继续正常执行。
+
+**核心概念澄清：**
+
+1. **中断响应优先级 (IRQ Priority / Arbitration Priority)：**
+   - 决定当**多个中断请求同时有效**时，PIC 选择哪个中断请求发送给 CPU（即谁先获得响应）。
+   - 在你的例子中：`A > B > C`。意味着如果 A、B、C 同时有效，PIC 会优先将 A 的请求发送给 CPU。
+2. **中断处理优先级 / 嵌套优先级 (Interrupt Nesting Priority / Masking Priority)：**
+   - 决定**当前正在执行的中断服务程序 (ISR)** 能够被哪些**更高优先级**的中断打断。
+   - 这通过**中断屏蔽寄存器 (IMR)** 来实现。当前运行的 ISR 会在 IMR 中设置一个**屏蔽位 (Masking Level)**，通常只允许**比自己处理优先级更高**的中断请求通过 PIC 到达 CPU。
+   - 在你的例子中：`C > B > A`。这意味着：
+     - 如果 C 的 ISR 正在执行，它设置 IMR 后，会屏蔽 B 和 A（甚至可能屏蔽所有更低优先级）。
+     - 如果 B 的 ISR 正在执行，它设置 IMR 后，会屏蔽 A，但**不会屏蔽 C**。
+     - 如果 A 的 ISR 正在执行，它设置 IMR 后，**不会屏蔽 B 和 C**（因为 B 和 C 的优先级都比 A 高）。
+
+**针对你描述的场景分析：**
+
+- **初始状态：** CPU 正在执行中断源 **A** 的 ISR。
+- **事件：** 中断源 **B** 和中断源 **C** **同时**发出中断请求。
+- **PIC 内部处理：**
+  1. 硬件设置中断请求寄存器 (IRR) 中 B 和 C 对应的位为 1。
+  2. PIC 查看当前的中断屏蔽寄存器 (IMR)。因为当前正在执行 **A** 的 ISR (处理优先级最低 `A`)，其设置的 IMR **不会屏蔽**处理优先级更高的 **B** (`B > A`) 和 **C** (`C > A`)。
+  3. 因此，B 和 C 的中断请求**都能通过 IMR 的检查**，成为有效请求。
+  4. PIC 现在有 B 和 C 两个有效中断请求。它根据**中断响应优先级** (`A > B > C`) 进行仲裁。注意：这里响应的是 B 和 C，A 已经在服务中，不再参与此轮仲裁。
+     - 响应优先级 `B > C`（因为 `A > B > C` 意味着 B 的响应优先级高于 C）。
+     - PIC 选择**响应优先级最高**的 **B**，将其请求发送给 CPU（设置 INTR 信号有效）。
+- **CPU 响应：**
+  1. CPU 完成当前指令（A 的 ISR 中的一条指令）。
+  2. CPU 检测到 INTR 信号有效。
+  3. CPU 向 PIC 发送 **INTA (Interrupt Acknowledge)** 信号。
+  4. PIC 收到 INTA，将**当前最高优先级有效请求（即 B）对应的中断向量号**放到数据总线上。
+  5. CPU 读取中断向量号，保存当前上下文（A 的 ISR 现场），跳转到 **B 的 ISR** 开始执行。
+- **当前状态：** CPU 现在执行 **B** 的 ISR。
+- **后续可能 (嵌套)：**
+  1. B 的 ISR 开始执行时，它会设置 IMR。由于处理优先级 `C > B > A`，B 的 ISR 设置的 IMR 会屏蔽 A (`A < B`)，但**不会屏蔽 C** (`C > B`)。
+  2. 中断源 **C** 的请求依然有效（它的 IRR 位在服务完成前一直为 1）。
+  3. C 的请求通过 IMR（因为 C 优先级 > B）。
+  4. PIC 检测到有效的 C 请求，且其优先级高于当前正在执行的 B，因此 PIC 再次将 INTR 置为有效。
+  5. CPU 在 B 的 ISR 中执行完一条指令后，再次检测到 INTR 有效。
+  6. CPU 再次响应 INTR，发送 INTA。
+  7. PIC 将 C 的中断向量号发给 CPU。
+  8. CPU 保存 B 的 ISR 现场，跳转到 **C 的 ISR** 开始执行。
+- **最终状态：** CPU 执行 **C** 的 ISR。此时 C 的 IMR 会屏蔽 B 和 A。C 的 ISR 执行完成后，返回到 B 的 ISR，B 的 ISR 执行完成后，再返回到 A 的 ISR，A 的 ISR 执行完成后，最后返回到最初被 A 中断的主程序。
+
+#### 中断驱动的I/O方式
+
+![](/img/evreaasx.png)
+
+![](/img/23edsa.png)
+
+#### 中断处理过程
+
+![](/img/wvres4.png)
+
+* 中断处理过程中的现场指的是通用寄存器当中的内容
+* 旧屏蔽字就是比如说A的中断被B打断，需要保存当前A的IMR内容，以便下一次执行这个中断源A的中断服务程序的时候，恢复屏蔽字
+* 硬件识别中断不需要查明原因
+
+#### 多重中断的概念
+
+![](/img/786yh.png)
+
+* 这里的多个中断同时请求是指未被屏蔽的中断
+
+##### 例题
+
+![](/img/u5eeh.png)
+
+![](/img/193900.jpg)
+
+![](/img/tyejq.png)
+
+* ②执行完之后为什么要回到用户程序
+  * 因为在二号中断源的环境下，这个中断屏蔽字决定了它是检测不到这个三号中断源发过来的中断请求的。所以就要回到上一层也就是用户程序，只有在用户程序的环境下，才能检测到这个三号中断源发出的中断请求
+
+### printf——从系统调用开始
+
+![](/img/erah.png)
+
+* 用户通过系统调用命令向操作系统请求内核的服务，系统调用命令**进入这个内核态之前**，在**用户态发起的这个系统调用命令**其实就属于**用户层I/O软件**
+
+![](/img/09j0.png)
+
+* 操作系统实际上是执行write系统调用来完成printf这个工作
+  * printf实际上就是用户要操作系统帮助用户把字符串进行输出，通过write系统调用，所以叫做接口（通过xx来实现某个功能）
+* 普通用户怎么去使用系统调用：可以通过执行C语言中的库函数。
+
+![](/img/f3q45.png)
+
+* 所以叫做库函数里面封装了系统调用，因为printf里面封装了write系统调用
+* 通过int $0x80进入内核态，该条代码以上是用户态，以下是内核态
+
+![](/img/3q4v.png)
+
+![](/img/00206.jpg)
+
+* 由操作系统完成也就是由软件来完成的，如果不是由硬件来完成的，就认为是由操作系统来完成的
+* 执行系统调用服务例程其实就是执行中断处理程序
+
+![](/img/zsv4.png)
+
+#### 轮询方式下输出一个字符串
+
+![](/img/32qawserdt.png)
+
+* 状态寄存器是I/O接口里面的一个寄存器
+* 将字符串复制到内核缓冲区，这里的字符串指的是用户缓冲区申请的字符数组char buf，我们首先要将用户缓冲区的内容复制到内核缓冲区当中
+
+![](/img/e56uf.png)
+
+* 任何一个程序都分为用户空间和内核空间，内核空间在真实的物理内存里面，映射到同一个物理内存（内核空间共享）。而他们的用户空间映射的是不同的一个物理内存
+* 因为是在内核态执行程序，所以就需要把用户态的内容复制到内核态，为了数据的一致性和安全性
+
+![](/img/w4b5.png)
+
+* 虽然进入到了内核态了，但是操作系统中，页表中的内容还是原本的进程，里面的内容是能够找到用户缓冲区buffer里面的内容的，所以它可以直接把用户缓冲区当中的内容复制到内核缓冲区的。
+  * 这个过程相当于一个访存的指令，在内核态下，它是完全可以访问内存空间的
+
+![](/img/jetgr5.png)
+
+* while(printer_status != READY)
+  * 假如这个显示器的状态不是就绪状态，就一直循环等待
+
+![](/img/er5y.png)
+
+* 设备驱动程序来负责一个数据的具体传输
+  * 设备驱动程序对设备的I/O端口交互信息，发出命令
+  * 等待直到显示器状态为“就绪”就是设备驱动程序完成的
+  * 向数据端口输出一个字符是设备驱动程序完成的
+  * 发送启动打印命令是设备驱动程序完成的
+* system write的核心功能就是调用这个设备驱动程序来完成实际的字符串的一个输出过程的
+* 整个过程：
+  * 在用户态下使用printf库函数
+  * printf库函数进入到内核态，发起系统调用，通过system write实现具体的输出功能
+  * system write里面调用设备驱动程序drive write，设备驱动程序和I/O端口进行交互
+
+![](F:\try\home\themes\fluid\source\img\w45b.png)
+
+* 内存缓冲区首址：从内存的哪里开始输出这个字符
+
+![](F:\try\home\themes\fluid\source\img\45wn5.png)
+
+##### I/O接口（I/O控制器）的结构
+
+![](F:\try\home\themes\fluid\source\img\6u5t.png)
+
+#### 中断驱动方式下输出一个字符串
+
+![](F:\try\home\themes\fluid\source\img\w45n54.png)
+
+![](F:\try\home\themes\fluid\source\img\54rtfg.png)
+
+* 中断隐指令中，切换到内核态和保存断点都是硬件完成的
+  * 请求和响应之间就是中断隐指令
+
+![](F:\try\home\themes\fluid\source\img\w45nmq.png)
+
+* Q1：以单独的形式存在，还是以内核的代码和输出的形式被调用？
+
+![](F:\try\home\themes\fluid\source\img\6r7igj.png)
+
+* 轮询方式下，输出n个字符，每个字符都要去向数据端口输出，都要去查询这个设备的状态是否空闲，也就是要重复n次过程
+* 第一个字符的输出完成之后，外设会向CPU发出一个中断请求，然后调出响应的中断服务程序
+
+![](F:\try\home\themes\fluid\source\img\54wbn4w.png)
+
+* 只有第一个字符由system write完成，其他由中断服务程序完成
+
+![](F:\try\home\themes\fluid\source\img\k66j.png)
+
+![](F:\try\home\themes\fluid\source\img\b4w5w.png)
+
+* 由两部分函数完成一个字符串的输出功能
+  * system write
+  * 中断服务程序
+* 因为是在执行进程B的过程当中响应的中断执行，因此执行的中断服务程序，是在**进程B的运行环境**里面完成字符的输出
+  * 相当于是A本身的任务让别的进程来完成
+* 进程A和中断服务程序都调用了设备驱动程序
+
+![](F:\try\home\themes\fluid\source\img\zwb332.png)
+
+![](F:\try\home\themes\fluid\source\img\4w5n.png)
+
+![](F:\try\home\themes\fluid\source\img\kur67.png)
+
+
+
+![](F:\try\home\themes\fluid\source\img\76n4b7.png)
+
+* 进程A的也表里面肯定是有一项包括buffer内容的，但是发生进程切换以后，页表当中的内容变成进程B的内容，如果说不把用户缓冲区当中的内容复制到内核缓冲区，那么发生进程切换之后，进程A的页表内容变成进程B的页表内容，只有用户缓冲区中断服务程序，无法正确地访问缓冲区当中的内容
+  * 因此如果复制到内核缓冲区，无论进程如何变化，都共享同一块内核空间，映射是一样的，总能找到内核缓冲区的内容进行正确输出
+
+![](F:\try\home\themes\fluid\source\img\536n.png)
+
+![](F:\try\home\themes\fluid\source\img\edj65j.png)
+
+* 箭头都是驱动程序干的工作
+
+##### 中断服务程序与设备驱动程序的关系
+
+![](F:\try\home\themes\fluid\source\img\b365b.png)
+
+* 中断总控程序区调用具体的一个设备驱动程序去完成一个具体的中断处理
+* 计组里面讲的中断处理程序是包括设备驱动程序的
+  * 操作系统里面则是抽离出设备驱动程序的具体的数据传输过程
+
+#### DMA方式下输出一个字符串
+
+![](F:\try\home\themes\fluid\source\img\piiupo.png)
+
+![](F:\try\home\themes\fluid\source\img\uykrk.png)
+
+* DMA控制器的总线使用优先级比CPU高是因为DMA控制器当中的数据不被及时取出，很容易被后续的数据冲刷掉，而CPU里面有通用寄存器，可以暂存。
+* 在进行磁盘传输的过程当中，当磁盘寻道结束之后，要向CPU发起一个中断请求信号，执行一个相应的中断服务程序，当DMA控制器执行完这个数据传送之后，也会执行一个中断服务程序，通过DMA结束中断，告知CPU让CPU进行后续处理
+
+![](/img/q235b.png)
+
+![](/img/p08p.png)
+
+* 周期挪用法、交替使用法、CPU停止法
+* 设备驱动程序是通过静态的内核程序和数据的方式被我们的进程所调用执行的
+
+![](/img/03q0940.png)
+
+### scanf的完整故事
+
+![](/img/q34bqb.png)
+
+![](/img/09vq79857.png)
+
+* read要读进来一个字符串，应该先放到内核缓冲区，会一直去检查内核缓冲区是否为空
+* 用户缓冲区是scanf函数展开式申请的buffer
+
+![](/img/vq0308.png)
+
+* 从设备控制器中读出数据，将取出的字符送入内核缓冲区，都是设备驱动程序完成的
+
+![](/img/qn23b52b.png)
+
+* 同步互斥
+* 按下键盘→数据先传送到设备控制器→中断处理程序把数据从设备控制器送到内核缓冲区（具体是设备驱动程序）→scanf发起进程将数据从内核缓冲区送到用户缓冲区
+
+![](/img/bw563qb6.png)
+
+![](/img/qg.png)
+
+![](/img/3q4b34qb63b.png)
+
+* 系统缓冲区就是内核缓冲区
+* 用户态到内核态是硬件完成的
