--- a/source/_posts/操作系统大题强化.md
+++ b/source/_posts/操作系统大题强化.md
@@ -94,14 +94,86 @@ index_img: /img/1920x1080 (40).jpg
   * 如：规定同一时间只能有一个哲学家就餐（禁止并行）
 * 3、让进程一口气取得所有资源，再开始运行（通用，且并发度高，建议使用）
   * 如：哲学家只有能够取得两个筷子时才会就餐
-
+* 第二种和第三种解决方法的区别：
+  * 第二种可能出现尚未就餐的哲学家部分占有资源而等待用餐哲学家释放所需资源的情况，而第三种则不可能出现部分占有，要么全拿要么一个都没有
 * 一类进程需要同时持有多种资源才能正常往下运行
 * 哲学家问题大概率出现防止死锁的题眼
+
+#### 哲学家问题模板
 
 ![](/img/iuynhtbgrvfd.png)
 
 * 用int型变量定义各类资源，在每一个进程开始做事之前，一口气把所有的资源都拿到手，然后再开始做他该做的事情，做完这些事情之后，再一口气归还所有的资源。
   * 这样可以确保死锁不发生，也可以确保进程和进程之间的并发度
+
+![](/img/iuynhtbgrvfd.png)
+
+* 表示资源的常用方法：
+
+  * 模板1：用int变量表示资源（并发度高）
+
+    * ①定义大锁
+
+      * semephore lock=1
+        * 互斥信号量
+        * 所有哲学家进程在获取资源之前都需要先获取这个大锁
+        * 保证获取这些资源是互斥进行的
+
+    * ②定义资源数int
+
+      * 如：有a、b、c三类资源，分别有9个、8个、5个，定义3个int变量
+        * int a=9;
+          * 表示a的剩余数量
+        * int b=8;
+          * 表示b的剩余数量
+        * int c=5;
+          * 表示c的剩余数量
+
+    * ③写代码模板：
+
+      * 一口气拿所有资源
+
+      ```c++
+      Process(){
+      while(1){//不断轮询去检查资源够不够
+      	p(lock);//上锁，同一时刻只有一个哲学家进程去检查这些资源够不够，也就是确保每个哲学家对于各种资源的访问是互斥的，不会同时去访问这些变量
+          if(所有资源都够){//ifa>=3 &&b>=2(假如需要3个a，2个b)
+          	所有资源int值减少;//题目会告诉你每类资源要几个，需要多少减多少
+              取xxx资源;//一口气拿走所有资源
+              V(lock);//拿完资源，解锁
+              break;//跳出while循环，到第4个步骤
+          }
+          v(lock);//资源不够，解锁，再循环尝试一次，直到if的条件成立，才进入if内最后到break跳出循环
+      
+      }//while结束
+      }
+      ```
+
+    * ④做进程该做的事（如：哲学家干饭）
+
+      * 用中文说明即可
+      * 到这一步进程所需要的所有资源都已经够了
+
+    * ⑤一口气归还所有资源
+
+      ```c++
+      P(Lock);
+      归还所有资源，所有资源int值增加;
+      V(Lock);
+      ```
+
+    * 并发度问题：
+
+      * 这种情况下进程的并发度一定是很高的，比如有p1p2p3p4进程，都在轮询检查资源够不够
+        * p1检查了一段时间后时间片用完，处理机调度（CPU调度）切换成另一个进程上CPU运行，也会while循环检查
+        * 此时如果另一个进程p5释放了资源，那p2就能一口气获得所需要的资源
+        * 因此这种while循环不会让一个进程无限制地占用处理机，因为操作系统有CPU调度这个功能
+        * 所以一个进程运行了若干个时间片之后，会下处理及运行，虽然这个进程没有被阻塞，但是会下处理机，然后调度另一个进程继续执行，所有进程等待资源的时候都在轮询检查，直到能够一口气获取所有资源，这样进程的并发度就能够得到保证
+
+  * 模板2：每一类资源对应一种信号量
+
+    * 为了确保可以一口气拿走所有资源，可以用一个mutex，先p（mutex）然后p所有资源，再v（mutex）
+    * 并发度不高，剩余资源足够的可能因为mutex取不到导致并发度不高
 
 #### 习题带练
 
@@ -132,3 +204,365 @@ index_img: /img/1920x1080 (40).jpg
 ![](/img/thrrdsa.png)
 
 ![](/img/215009.jpg)
+
+### 理发师问题
+
+#### 理发师问题和生产者消费者问题的区别
+
+![](/img/fdbdzb.png)
+
+* 生产者消费者问题
+  * A进程生产数据，数据会放到缓冲区里
+  * B进程会从缓冲区里取走数据
+  * 二者一个生产资源一个消费资源
+
+* 理发师问题
+
+  * 没有明显的生产资源消费资源的关系
+  * 服务和被服务的关系
+
+* 思路
+
+  * 顾客（被服务）
+    * 如何用代码表示”取号“动作？
+    * 是否有”等位区座位上限“？
+
+  ```c++
+  //顾客
+  int waiting=0;//当前有多少个顾客正在等待被服务（已取号但未被服务的顾客）
+  semaphore mutex=1;//用互斥变量保证对waiting变量的互斥访问
+  semaphore service=0;//服务信号量，特殊的生产者消费者关系
+  customer_i(){//因为被服务一次即完成，所以不用循环
+      p(mutex);//互斥访问waiting，上锁
+      取号;
+      waiting ++;
+      v(mutex);//解锁
+      等待被叫号;
+      p(service);//因为需要申请一个服务才能够被服务，所以需要p一种资源
+      被服务;
+      
+  }
+  ```
+
+  * 服务人员（提供服务）
+    * 如何用代码表示”叫号“？
+    * 没有顾客时，应该”忙等“or”睡觉“？
+      * 睡觉：p操作阻塞
+      * 忙等：while循环
+
+  ```c++
+  //服务人员
+  int waiting=0;//当前有多少个顾客正在等待被服务
+  semaphore mutex=1;//用互斥变量保证对waiting变量的互斥访问
+  semaphore service=0;//服务信号量，特殊的生产者消费者关系
+  server_j(){
+      while(1){//不停服务，所以要循环
+         p(mutex);//互斥访问waiting,上锁
+      if(waiting>0){//有顾客在等待
+          
+          叫号;
+          waiting --;
+          v(mutex);//解锁
+          v(service);//提供一个服务
+          提供服务;
+      }
+      else{
+          v(mutex);//在无顾客的时候也要解锁
+          
+      	}//else end
+  	}//while end
+  }
+  ```
+
+  * 总结
+
+    **顾客无等位区需求，服务人员忙等的情况**
+
+  ```c++
+  int waiting=0;//当前有多少个顾客正在等待被服务（已取号但未被服务的顾客）
+  semaphore mutex=1;//用互斥变量保证对waiting变量的互斥访问
+  semaphore service=0;//服务信号量，特殊的生产者消费者关系
+  //顾客
+  customer_i(){//因为被服务一次即完成，所以不用循环
+      p(mutex);//互斥访问waiting，上锁
+      取号;
+      waiting ++;
+      v(mutex);//解锁
+      等待被叫号;
+      p(service);//因为需要申请一个服务才能够被服务，所以需要p一种资源
+      被服务;
+      
+  }
+  //服务人员
+  server_j(){
+      while(1){//不停服务，所以要循环
+         p(mutex);//互斥访问waiting,上锁
+      if(waiting>0){//有顾客在等待
+          
+          叫号;
+          waiting --;
+          v(mutex);//解锁
+          v(service);//提供一个服务
+          提供服务;
+      }
+      else{
+          v(mutex);//在无顾客的时候也要解锁
+          
+      	}//else end
+  	}//while end
+  }
+  ```
+
+  **顾客有等位区需求，服务人员忙等的情况**
+
+  ```c++
+  int waiting=0;//当前有多少个顾客正在等待被服务（已取号但未被服务的顾客）
+  semaphore mutex=1;//用互斥变量保证对waiting变量的互斥访问
+  semaphore service=0;//服务信号量，特殊的生产者消费者关系
+  //顾客
+  customer_i(){//因为被服务一次即完成，所以不用循环
+      p(mutex);//互斥访问waiting，上锁
+      if(waiting>=max){
+          v(mutex);//释放互斥信号量
+          return;//离开
+      }
+      取号;
+      waiting ++;
+      v(mutex);//解锁
+      等待被叫号;
+      p(service);//因为需要申请一个服务才能够被服务，所以需要p一种资源
+      被服务;
+      
+  }
+  //服务人员
+  server_j(){
+      while(1){//不停服务，所以要循环
+         p(mutex);//互斥访问waiting,上锁
+      if(waiting>0){//有顾客在等待
+          
+          叫号;
+          waiting --;
+          v(mutex);//解锁
+          v(service);//提供一个服务
+          提供服务;
+      }
+      else{
+          v(mutex);//在无顾客的时候也要解锁
+          
+      	}//else end
+  	}//while end
+  }
+  ```
+
+  **顾客有等位区需求，服务人员闲时阻塞的情况**
+
+  ```c++
+  int waiting=0;//当前有多少个顾客正在等待被服务（已取号但未被服务的顾客）
+  semaphore = 0;
+  semaphore mutex=1;//用互斥变量保证对waiting变量的互斥访问
+  semaphore service=0;//服务信号量，特殊的生产者消费者关系
+  //顾客
+  customer_i(){//因为被服务一次即完成，所以不用循环
+      p(mutex);//互斥访问waiting，上锁
+      if(waiting>=max){
+          v(mutex);//释放互斥信号量
+          return;//离开
+      }
+      取号;
+      waiting ++;
+      v(mutex);//解锁
+      v(customer);
+      等待被叫号;
+      p(service);//因为需要申请一个服务才能够被服务，所以需要p一种资源
+      被服务;
+      
+  }
+  //服务人员
+  server_j(){
+      while(1){//不停服务，所以要循环
+         p(mutex);//互斥访问waiting,上锁
+      if(waiting>0){//有顾客在等待
+          
+          叫号;
+          waiting --;
+          v(mutex);//解锁
+          v(service);//提供一个服务
+          提供服务;
+      }
+      else{
+          v(mutex);//在无顾客的时候也要解锁
+          p(customer);//有顾客才被唤醒，此处需要p操作p一种资源才能进行
+      	}//else end
+  	}//while end
+  }
+  ```
+
+  ![](/img/jdhgbffsrshr.png)
+
+#### 习题带练
+
+##### 1
+
+![](/img/rgeaf.png)
+
+* 睡觉：阻塞等待
+
+##### 2
+
+![](/img/uyrg.png)
+
+* 循环忙等
+
+##### 3
+
+![](/img/sh.png)
+
+![](/img/wva3v532.png)
+
+##### 4
+
+![](/img/ytejertrt.png)
+
+![](/img/qwecqwcr.png)
+
+
+
+##### 5
+
+![](/img/uyj.png)
+
+![](/img/htrh.png)
+
+##### 6
+
+![](/img/kuydtst.png)
+
+![](/img/4w5wv.png)
+
+### PV操作带练
+
+![](/img/wh.png)
+
+![](/img/23qc.png)
+
+![](/img/v34q.png)
+
+#### 同步问题
+
+![](/img/aqr5y.png)
+
+![](/img/q3v.png)
+
+* 同一个进程本身的动作不需要我们去同步
+
+![](/img/34qb.png)
+
+* 没有缓冲区，不存在互斥问题，非消费者生产者问题
+  * 并没有说把这个东西生产完之后放在哪里，只是不停地生产它，因此没有互斥关系只有同步关系
+
+![](/img/11.png)
+
+* 刚开始生产的，因为第一次可以直接进行，因此信号量为1，一开始需要条件的，信号量设为0
+
+#### 互斥问题
+
+![](/img/1bv.png)
+
+![](/img/6b3b54.png)
+
+* 只有全局变量才可能成为临界资源，局部变量只能在单一线程内访问，被单一线程看到
+* 不是说几个临界资源，几个全局变量就设置几组互斥关系的
+* 也不是说几个进程就设置几组互斥关系的
+
+![](/img/6w2b254.png)
+
+* 并不是信号量设置的越少并发度越高，也不是信号量越多并发度越高，只有正确地设置信号量才能保证并发度
+
+![](/img/7m7m.png)
+
+##### 互斥问题——读者写者
+
+![](/img/89p.png)
+
+* 遇见分支了，我们就要引入辅助变量count来帮助我们解决问题
+
+###### 有读者和写者两个并发进程
+
+![](/img/xn5nn.png)
+
+###### 有读者和写者两组并发进程
+
+![](/img/hrerr.png)
+
+* 如果这样写，会导致实际上读者和读者之间也是互斥访问的
+
+![](/img/v24313b.png)
+
+![](/img/41431.png)
+
+* 蓝色是P操作，红色是V操作，读者有两条路，因此出现了**分支**，必引出**辅助变量**，需要额外设置信号量
+
+```c++
+//写者
+writer(){
+    p(ww);//实现写者之间的互斥
+        p(rw);
+    		写文件
+        v(rw);
+    v(ww);
+}
+//读者
+reader(){
+    
+    if(count==0){
+        p(rw);
+        
+    }
+    else{
+        read;
+    }
+}
+```
+
+* 读者优先
+
+![](/img/dnmmm.png)
+
+* 读写公平
+
+![](/img/8m7,.png)
+
+* 因为W关卡的本质是设置一个公平排队逻辑，让每次只有一个读者或者一个写者进入排队队列，因此当这个读者或者写者排完队进入这个文件以后，就要对排队逻辑进行一个V操作
+
+![](/img/7m8m87m.png)
+
+![](/img/34vvb31.png)
+
+#### 互斥问题——哲学家吃饭
+
+![](/img/6b53bb.png)
+
+#### 同步互斥综合问题
+
+![](/img/v34bb4b.png)
+
+![](/img/1231v.png)
+
+![](/img/54b2.png)
+
+![](/img/45v.png)
+
+![](/img/87mm7m.png)
+
+* 环形缓冲区：有序缓冲区，能够通过合理的设置，可以在不使用信号量的情况下，天然地保证生产者和消费者不会访问到同一个缓冲区
+* 普通缓冲区：无序缓冲区，因为无论是生产者还是消费者都需要互斥访问这个缓冲区
+
+![](/img/5m5m5m5m.png)
+
+![](/img/5mth.png)
+
+![](/img/542b4v2v.png)
+
+![](/img/56v45v2v.png)
+
+![](/img/653b5b3b.png)
