--- a/source/_posts/操作系统大题强化.md
+++ b/source/_posts/操作系统大题强化.md
@@ -73,9 +73,47 @@ index_img: /img/1920x1080 (40).jpg
 
 ##### 2
 
+* 第一种思路
+
 ![](/img/gaerds.png)
 
 ![](/img/aergds.png)
+
+* 第二种思路
+
+![](/img/IMG_4575.jpg)
+
+环形缓冲区：按照环形有序的序列去放产品
+
+![](/img/IMG_4576.jpg)
+
+![](/img/IMG_4577.jpg)
+
+![](/img/IMG_4579.jpg)
+
+实现方式：利用循环队列，队头队尾取数存数
+in：队尾指针，进队前移
+out：队头指针，出队前移
+
+![](/img/IMG_4580.jpg)
+
+在环形缓冲区的条件下，生产者进程所访问的位置一定是in指针所指的位置，消费者进程所访问的位置一定是out指针所指的位置，因此生产者进程和消费者进程就不可能同时访问同一个缓冲区，这就打破了经典的生产者消费者问题里面的限制，即生产者和消费者对于缓冲区的互斥访问，生产者进程和消费者进程可以同时访问缓冲区
+
+![](/img/IMG_4581.jpg)
+
+互斥关系变成了生产者之间，消费者之间，各自的互斥访问，而生产者和消费者之间不再互斥。程序的并发度提高。
+
+![](/img/IMG_4582.jpg)
+
+![](/img/IMG_4583.jpg)
+
+因为in和out指针指向的是缓冲区的位置，我们改变的in和out指针其实就相当于改变缓冲区，因此对in和out指针改变的操作应该用互斥信号量进行控制
+
+![](/img/IMG_4584.jpg)
+
+并不是代表缓冲区有10个产品才可以开始取，就算缓冲区只有一个产品，此时消费者进程也可以开始取产品，只不过取完一个产品之后，需要等生产者进程继续往里面放产品，然后消费者进程才可以接着取
+
+![](/img/IMG_4585.jpg)
 
 ##### 3
 
@@ -182,8 +220,6 @@ index_img: /img/1920x1080 (40).jpg
 ![](/img/tsrfdg.png)
 
 ![](/img/220654.jpg)
-
-##### 2
 
 ### 单纯的同步问题
 
@@ -358,7 +394,7 @@ index_img: /img/1920x1080 (40).jpg
 
   ```c++
   int waiting=0;//当前有多少个顾客正在等待被服务（已取号但未被服务的顾客）
-  semaphore = 0;
+  semaphore customer= 0;
   semaphore mutex=1;//用互斥变量保证对waiting变量的互斥访问
   semaphore service=0;//服务信号量，特殊的生产者消费者关系
   //顾客
@@ -566,3 +602,35 @@ reader(){
 ![](/img/56v45v2v.png)
 
 ![](/img/653b5b3b.png)
+
+## 存储系统串讲 内存管理+文件管理
+
+![](/img/erhhhhhhhh.png)
+
+* 一般考请求分页，请求分页可能结合一级页表也可能结合二级页表
+* 如果考基本分页则一般考二级页表
+* 核心是地址转换
+* 页表：把虚拟地址（逻辑地址）映射为物理地址
+  * 无论是指令还是数据都是存储在内存里面的，无论是数据还是指令，在进程内部都是用虚拟地址来表示
+
+### 进程的内存示意图
+
+![](/img/yubvd.png)
+
+![](/img/utmjnhgbfvd.png)
+
+* 用户程序不可以访问PCB
+* 编译、汇编的时候生成机器指令
+  * 编译：将高级语言源程序一次性翻译成目标程序
+  * 解释：将源程序的一条语句翻译成对应的机器目标代码，并立即执行，然后翻译下一条源程序语句并执行，直至所有原程序语句全部被翻译并执行完，并不会生成目标程序
+  * 汇编：把汇编语言翻译为机器语言程序
+* 库函数本质上也是指令序列，会被这个系统当中的所有程序所共享，会被映射到共享库的存储映射区
+  * 这些函数对应的指令序列在物理上只有一份，只是多个进程都会把这一份物理指令序列映射到自己的虚拟地址空间当中，相当于页面共享
+* 操作系统内核区也是被所有进程所共享的
+  * 操作系统内核区的数据物理上也只有一份，为所有的进程所共享
+  * 实现方法：把这些进程更高地址的1GB映射到同样的一片物理页框中即可
+
+### 存储系统图
+
+![](/img/ppouikf.png)
+
