--- a/source/_posts/操作系统大题强化.md
+++ b/source/_posts/操作系统大题强化.md
@@ -603,7 +603,7 @@ reader(){
 
 ![](/img/653b5b3b.png)
 
-## 存储系统串讲 内存管理+文件管理
+## 内存管理
 
 ![](/img/erhhhhhhhh.png)
 
@@ -632,5 +632,130 @@ reader(){
 
 ### 存储系统图
 
-![](/img/ppouikf.png)
+![](/img/IMG_4586.jpg)
+
+* 左边是虚拟地址空间，中间是物理地址空间，右边是磁盘
+* 由于7号页在磁盘不在内存，因此访问7号页面会缺页，需要把7号页调入主存
+
+![](/img/IMG_4587.jpg)
+
+![](/img/05940.jpg)
+
+* 假设现在CPU要写的某一个变量的虚拟地址是0003 996H，现在要去查一级页表，一级页表存储在虚拟地址空间的操作系统内核区（属于内核数据结构）
+
+* CPU是怎么去找到当前执行的进程页表存储在什么位置？
+
+  * PCB进程控制块记载了当前进程的页表始址
+
+* 操作系统怎么找到当前进程的PCB
+
+  * 通过进程号PID，数据结构PCB，PID是数组下标，假设操作系统最多可以支持100个进程并发运行，可以定义一个struct pcb a[100]，每个进程的PID就可以作为这个数组的数组下标，因此，根据进程的PID，我去查找这个PCB数组的某一个元素，比如PID=3，那么我们去找a[3]
+
+* 定义一个指针指向当前页表的页表始址，在内核区的某个虚拟地址
+
+* 每一个进程在被调度上处理机的时候，操作系统会根据被调度的进程的PID，去找它的PCB，然后从PCB里面得知页表始址（虚拟地址），然后转化为物理地址，然后把该始址存储到CPU的寄存器里面（页表始址寄存器）
+
+  * 如何把页表始址的虚拟地址转化为物理地址？
+    * 所有的进程都是共享操作系统内核区的，所以所有的进程操作系统内核区的映射关系都是一样的。
+    * 因为任意一个进程的页表都是存储在操作系统内核区的，而操作系统内核区是被所有进程共享的。
+    * 因此，只要我知道了这个进程的页表起始地址，那么操作系统不管是任何一个进程，都可以根据每个进程的页表起始地址去转换成映射到我操作系统内核区的物理地址。
+
+* 查页表的过程：
+
+  * 根据页表始址寄存器所指明的地址去内存中，在某一个页框中找到页表
+    * 页表是由页表项组成的，页表项有很多个，页表项在页表当中连续存储，本质是struct结构体，页表项存储有效位，页面在外存中的地址，脏位，页框号（VA→PA页框），页表本质是页表项的数组
+    * eg：游戏存档：本质上就是把内存里面脏位=1的那些数据，当存储这些数据的页面被淘汰，被置换到外存，或者主动手动点存档的时候，脏了的页面需要协会到外存
+
+* 二级页表的情况下，PCB会保存顶级页表的起始地址，放到顶级页表（页目录表）始址寄存器当中
+
+* 注意虚拟页号划分，有几级页表虚拟页号就分成几段，然后最高地址是一级页表，依次升级
+
+* 如果查到某一个页表项的有效位为0，说明没有调入主存，出发缺页异常（内中断，指令触发），接下来操作系统会进入到内核态，然后执行缺页异常的处理程序，然后会根据该页表项所写的数据在外存中的存储位置，从磁盘块中调进来。
+
+  * 调进来之后，修改有效位，对应内存页框号更新
+
+  * 异常处理程序执行结束之后会再次执行指令，就不会发生缺页，正常进行虚拟地址转化为物理地址
+
+    * 缺页异常（内中断，指令触发），比如说我执行int a=3，可能涉及到一个mov [虚拟内存地址]，3的指令，然后在转换的过程中，发现有效位为0，也就是这条指令引发了缺页异常
+
+    * 引发之后会转为处理异常的处理程序，操作系统陷入内核态，转入缺页异常的处理程序，然后执行一系列上面的事情
+
+      * 由于虚拟地址空间通常比物理内存大，因此无法一次性将所有虚拟地址空间中的页面都加载到物理内存中。操作系统会根据需求动态地将需要的页面加载到内存，而其他不常用的页面会被暂时置换到磁盘。这个过程叫做**缺页处理**
+
+        * 而页表里面的页表项存储的是虚拟地址空间里面的页表的信息， 所以页表里面不可能每一个页表项的有效位都为1（因为物理内存容纳不下所有的页都调入）
+
+          * 由于物理内存有限，虚拟地址空间可能会比物理内存大，所以会有一些数据暂时存放在**磁盘**（外存）中，只有当数据被访问时，操作系统会通过**缺页中断**将需要的数据从磁盘调入内存。
+          * 而且这还是一个进程的情况，多个进程的情况下每个进程实际上物理空间的冲突和缺页会更加频繁
+
+        * **虚拟地址空间**是为每个进程提供的独立的地址空间，它在物理内存中并不直接对应具体的内存位置，而是通过操作系统的内存管理单元（MMU）进行映射，也就是操作系统负责形成虚拟地址和物理地址的映射关系并且形成页表
+
+          * 操作系统根据一定逻辑形成虚拟地址和物理地址的映射关系并且形成页表，至于这里面的映射逻辑已经超出了408考试的范围，我们不用在意，只知道有一个东西即操作系统形成这个映射关系，导致物理内存容纳不下虚拟内存的所有东西，但是虚拟内存的东西在页表中有记录，哪些要放入虚拟内存，虚拟内存有那些东西都是操作系统负责，在磁盘中又能找到就行了
+
+          * 所以，你只需要知道：
+
+            1. **操作系统会管理虚拟内存和物理内存的映射**，并且通过**页表**来记录哪些虚拟地址对应物理地址。
+            2. 如果物理内存不足，操作系统会**将不常用的数据交换到磁盘**，并且需要时从磁盘读取数据回到内存。
+
+            不需要过多关注具体的映射逻辑细节，考试中大多会让你理解虚拟内存的概念和内存管理的基本原理即可。
+
+
+![](/img/IMG_4588.jpg)
+
+* 快表没有命中但是慢表命中以后，会把命中的慢表中的一些信息复制到TLB当中进行更新
+  * 也就是说访问一个页面第一次没有命中，但是第二次访问同一个页面的时候快表肯定能命中
+    * 命中：有效位为1且有匹配的页号
+  * 当查TLB没有命中，查慢表发现缺页异常的时候，却也处理程序把一个页面从外存中调入内存的时候，除了修改内存中的慢表之外，还会修改快表，因此当缺页处理之后，再次执行指令的时候TLB命中（除非题目说不修改TLB）
+* 缺页处理还可能涉及页面置换（页框不够），被换出的页面需要检查脏位，如果脏位为1，则操作系统会把对应页框的数据写回磁盘对应的区域（写磁盘）。然后空出来的原页框，就会被新调入的覆盖（读磁盘）
+  * 因为原页面被置换出去，原页表的页表项有效位要改为0，后面可以不改
+  * 换入的页的页表项有效位变成1，脏位变为0，页框号更新，对应置换算法的标记更新
+  * 页面置换算法属于缺页异常处理程序的子功能
+  * TLB那边也得相应发生改变
+
+![](/img/IMG_4589.jpg)
+
+* 上图为两个进程共享某些页面
+* 每个进程的虚拟地址空间都是不一样的，但是有一些数据（比如操作系统内核区和共享库的存储映射区）是共享的
+  * 操作系统内核区的数据是独一份，只有操作系统内核代码可以去访问
+    * 用户态下想访问会被阻止
+* 如何实现共享？
+  * 页表映射到同一个页框号，比如说进程A的页表中，页目录FFH存储的是操作系统内核的数据，进程B的页表中，页目录FFH存储的也是操作系统内核的数据，然后对应的二级页表中的页表项也相等，这样当他们访问相同虚拟地址的时候，访问的都是同一段数据
+  * 当所有进程都共享独一份的操作系统内核区数据（只要让所有进程的某一块页表项都映射到物理地址空间的同一块地方就可以了）
+  * 当然，因为二者的数据完全一致，所以完全可以让二者共享同一份二级页表（原来是两个页表但是映射到同一块区域，现在是另一个进程直接指向另一个进程的页表某块）
+  * 但是共享库的内存映射区不能这么干，因为二者数据不完全一致，引用的库函数不完全相同，所以有两份页表
+* p1和p2进程实现进程间通信的方式
+  * 共享内存
+    * 要进行系统调用，告诉操作系统哪个页面作为共享内存来交换数据，比如p1说4号页面，p2说六号页面，然后操作系统就会把p1的四号页所指向的页框和p2的六号页所指向的页框映射到同一个位置（比如都是FEEH物理地址）
+      * 此时当p1进程往四号页面读写的时候实际上是在读写FEEH，当p2进程往六号页面读写的时候，实际上是在读写FEEH
+      * p1写p2读，这样实际上就实现了进程之间的通信
+    
+  * 信箱通信
+    
+    ![](/img/082059.jpg)
+    
+    ![](/img/083056.jpg)
+    
+    * p1进程通过系统调用，先给操作系统写一段数据，然后操作系统再把这一段数据交给p2进程
+      * P1进程对操作系统发出系统调用，表示要用信箱通信，跟p2进程完成进程间通信。并且指明要写的数据是什么位置
+      * 操作系统收到系统调用之后，从用户态变为内核态
+      * 之后操作系统根据系统调用号（异常号）找到中断向量表，找到该系统调用所对应的函数入口（指令的起始位置），PC指向该系统调用指令第一条指令的起始位置，然后就可以开始执行系统调用的这个处理程序
+        * 因为此时CPU已经变成内核态了，所以PC要去访问这条指令或者说要去访问操作系统内核区的时候，是可以被允许的
+      * 操作系统的系统调用处理程序会根据传递过来的参数去访问用户区，找到p1进程准备好的数据，然后先复制到**操作系统内核区**某一个位置，当p2进程通过系统调用，对操作系统发出要从信箱中取多少数据的指令，接下来操作系统会把那段数据从操作系统的内核区复制给p2进程指定的其用户区的位置
+        * 因为所有进程共享独一无二的一片内核区，因此p2进程也能找到p1进程准备好的放在内核区的数据
+
+* 进程的驻留集大小就是给某一进程分配了几个页框，比如说某个进程的页表有三个页表项也就是3个页，但是实际上物理空间只分配了2个页框，那么其页表中有效位最多有2个为1的。
+* 局部淘汰：只从给进程本身分配的页框当中选择一个淘汰出去
+  * 全局淘汰：可能从其他进程的页框当中选择一个淘汰出去
+* 页表始址寄存器里面保存的是物理地址
+* 进程切换开销：从一个进程切换到另一个进程的时候，意味着TLB里面的所有数据，所有缓存的数据都得作废，Cache里面的数据也要作废
+  * 同一进程不同线程的切换，TLB和Cache数据副本不会作废，所以切换代价比进程切换小
+* 数组在虚拟地址空间中的地址连续，在物理地址空间里面不一定连续
+
+### 总结
+
+* 操作系统创建一个新进程的时候，就会给这个进程分配虚拟地址空间，而每一个进程的这个虚拟地址空间，里面包含各个页面，这些页面会被映射到物理内存的各个位置
+* 有一些页面是在外存当中还没有调入内存，所以我们需要有一个页表，用页表去表示出这个虚拟页面和物理页框之间的映射关系
+* 如果访问到一个暂时没有调入内存的页面，那么这样的页面，在页表项中，有效位是0，操作系统会通过缺页异常的处理，去外存当中把这个页面的数据调入内存，并且更新页表项。如果有TLB，更新慢表项数据的同时，也会把这个新调入的页面所对应的页表项的副本数据复制一份到TLB当中，这样的话，再次访问同一个页面，就可以直接TLB命中。
+* 操作系统给一个进程分配的页框是有限的，那么当页框不够用的时候，就要通过页面置换算法把页框置换出去
+* 两个进程共享操作系统的内核区，只要把两个进程虚拟地址的高地址部分映射到同一片物理页框里面即可
+* 共享内存，本质是就是操作系统修改两个进程的页表，让两个进程的页面（虚拟地址空间）映射到同一个页框（物理地址空间），让两个进程在同一个页框当中进行数据的读写
 
