--- a/source/_posts/计组强化大题.md
+++ b/source/_posts/计组强化大题.md
@@ -106,6 +106,7 @@ index_img: /img/1920x1080 (37).jpg
       * 而这个进程控制块里面就有一个变量记录了这个进程的页表始址
     * 当一个进程被调度的时候，这个进程即将上处理机运行的时候，操作系统会把PCB里面的这个页表始址写到CPU的页表始址寄存器里面
       * 这样的话，当这个进程正在运行的时候，CPU可以直接根据页表始址寄存器里的值，直接找到页表的存储位置
+      * 页表始址寄存器里面保存的是物理地址
     * 如果再换一个进程运行，那么我再从另一个PCB当中找到另一个进程的页表始址寄存器，页表始址再把这个值覆盖
 
 ![](/img/0000001.png)
@@ -1324,8 +1325,10 @@ index_img: /img/1920x1080 (37).jpg
   * 带其他特殊功能的寄存器
     
     *  ⒀带”符号扩展“功能的寄存器
+      
       *  可以将位数短的带符号数（补码）扩展为位数更长的带符号数（补码）
     * ⒁带”零扩展“功能的寄存器
+       
        * 可以将位数短的无符号数扩展为位数更长的无符号数
     * ⒂带”取反功能“的寄存器
       * 可以实现全部位按位取反
